# SuperCompressor

./: .gitignore  BitStream.cpp  BitStream.hpp  CMakeLists.txt  Exceptions.hpp  HuffmanCompressor.cpp  HuffmanCompressor.hpp  LZWCompressor.cpp  LZWCompressor.hpp  README.md  main.cpp  restored_huffman.txt  tests.cpp
